<resources>
    <string name="app_name">Scientific Calculator</string>


 <!-- 숫자 -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>




<!-- 산수 기호 -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="equal">=</string>
    <string name="AC">AC</string>
    <string name="per">%</string>
    <string name="bral">(</string>
    <string name="brar">)</string>


    <!-- 공학용 문자 -->

    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="pie">π</string>
    <string name="root">√</string>
    <string name="log">log</string>

</resources>
