<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bear.coding.scientificcalculator.MainActivity"
    android:weightSum="1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please put Values"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:gravity="right"
        android:text="value"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <TableLayout
        android:id="@+id/normalTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tablerow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/bral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bral" />

            <Button
                android:id="@+id/brar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brar" />

            <Button
                android:id="@+id/per"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per" />

            <Button
                android:id="@+id/AC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AC" />

        </TableRow>


        <TableRow
            android:id="@+id/tablerow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResult"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResult"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <Button
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal" />


        </TableRow>


        <TableRow
            android:id="@+id/tablerow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResult"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResult"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus" />


        </TableRow>


        <TableRow
            android:id="@+id/tablerow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResult"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResult"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResult"
                android:text="@string/nine" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResult"
                android:text="@string/minus" />


        </TableRow>


    </TableLayout>

    <TableLayout
        android:below="@id/normalTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/root"/>

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"/>

            <Button
                android:id="@+id/log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log"/>

            <Button
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mul"/>

        </TableRow>

        <TableRow
            android:id="@+id/table5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cos"/>


            <Button
                android:id="@+id/sin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin"/>

            <Button
                android:id="@+id/tan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tan"/>

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div"/>

        </TableRow>
    </TableLayout>


</LinearLayout>
